# haskellnotebook

./: README
haskellnotebook/benchmarks/crud_blog/: README  bench.sh  plot.sh
haskellnotebook/benchmarks/crud_blog/rails/: README  environment.rb
haskellnotebook/benchmarks/crud_blog/simple_server/: Makefile  SimpleHTTPServer.java  SimpleHTTPServerThread.java
haskellnotebook/benchmarks/data/basic_server_req/: LIN_summary_botlist_reads.csv  LIN_summary_jruby_default.csv  LIN_summary_lisp_default.csv  LIN_summary_php_default.csv  LIN_summary_simplehttp_default.csv  bench_lisp2.txt  bench_php.txt  bench_simple_http.txt  summary_all.csv  summary_all.html  summary_all.ods  summary_all_lin.csv  summary_all_lin.ods  summary_django_default.csv  summary_erlang_default.csv  summary_jruby_default.csv  summary_jrubybrick2_default.csv  summary_jrubyrailsjetty_default.csv  summary_jrubyrailstom2_default.csv  summary_jsp_default.csv  summary_lisp_default.csv  summary_rails_default.csv  summary_simplehttp_default.csv
haskellnotebook/erlang/blog_tutorial/: compile1.erl
haskellnotebook/erlang/blog_tutorial/with_make/: Makefile
haskellnotebook/erlang/euler/set1/: Makefile
haskellnotebook/erlang/euler2/: Makefile  run.sh
haskellnotebook/erlang/euler2/ebin/: euler12.beam
haskellnotebook/erlang/euler2/src/: euler12.erl
haskellnotebook/erlang/httpclient/: httpclient.erl
haskellnotebook/erlang/simple1/: echo_parallel.erl  fact.erl  hello_world.erl  parallel.erl  ping_pong.erl  tupl.erl
haskellnotebook/erlang/simple_irc_client/: LICENSE  Makefile  tests.sh
haskellnotebook/erlang/simple_irc_client/orbirclib/: LICENSE  Makefile  README.txt
haskellnotebook/erlang/simple_irc_client/src/: agent_lib.erl  laughingman.erl
haskellnotebook/factor/: LICENSE  README.txt
haskellnotebook/factor/botchart/: chart.sh  factor_bin_conf.sh
haskellnotebook/factor/botchart/botchart/: botchart.factor  summary.txt
haskellnotebook/factor/examples1/: remove_svn.sh
haskellnotebook/factor/examples1/csvparser1/: README.txt  factor_bin_conf.sh  parse.sh  testcsv.txt
haskellnotebook/factor/examples1/hello1/: HelloWorld.java  README.txt  hello.sh
haskellnotebook/factor/examples1/httptest1/: README.txt  http.sh  urls.txt
haskellnotebook/haskell/: hsql.fix.1.7.6.8.2.cabal
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/: Makefile  SpiderBot.cabal
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/src/Data/AMQP/: AMQPOperations.hs  QueueClient.hs
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/src/Data/SpiderDB/: Database.hs
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/src/Data/SpiderNet/: Bayes.hs  ContentMining.hs  Document.hs  DocumentInfo.hs  DocumentRules.hs  PageInfo.hs  Util.hs
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/src/Data/SpiderNet/Tools/: QueueExtractDump.hs  Tokenize.hs  TrainReport.hs
haskellnotebook/haskell/HaskellSimpleTextMining/lib/haskell/src/Data/SpiderQueue/: Queue.hs
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/: Makefile  SpiderTests.cabal
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/src/Tests/: Main.hs  UnitMain.hs
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/src/Tests/AMQP/: TestQueueClient.hs
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/src/Tests/Data/: TestBasicHSQL.hs  TestBayesInvChi.hs  TestBayesProb.hs  TestQueue.hs  TestSpiderDatabase.hs  TestStopWords.hs  TestTrainBayes.hs
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/src/Tests/Data/python/: test_invchi.py  test_prob.py
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/src/Tests/Unit/: TestExample.hs  TestStopWords.hs
haskellnotebook/haskell/HaskellSimpleTextMining/tests/haskell/train/: business.train  entertainment.train  politics.train
haskellnotebook/haskell/binaryfiles/: DbReader.hs  Makefile
haskellnotebook/haskell/botwords/: BotWords.hs  LICENSE_DOCS  Makefile  billrights.txt  usconst.txt
haskellnotebook/haskell/cabal/: Makefile  MyTests.cabal
haskellnotebook/haskell/exampleunicode/: ExampleUnicode.cabal  Makefile
haskellnotebook/haskell/exampleunicode/src/: write_unicode.py
haskellnotebook/haskell/exampleunicode/src/Tests/Unicode/: ExampleUnicode.hs
haskellnotebook/haskell/laughingman/haskell/: Makefile  ManClient.hs  NewBase64.hs  NewHttpBrowser.hs  NewMD5.hs  NewMD5Aux.hs
haskellnotebook/haskell/neural/achilles/: AUTHORS  ChangeLog  INSTALL  Makefile.in  Makefile.solaris  Makefile.win32  NEWS  README  acconfig.h  angle.cc  angle.h  bootstrap  braininfo.cc  braininfo.h  color.cc  color.h  conf.h  config.h.in  configure  configure.in  defines.h  energy.cc  energy.h  gene.cc  gene.h  hebbian.cc  hebbian.h  id.cc  id.h  idserver.cc  idserver.h  license.cc  main.cc  opengl.cc  opengl.h  org.cc  org.h  orglist.cc  orglist.h  quicksort.cc  (+8 more)
haskellnotebook/haskell/neural/achilles/config/: mkinstalldirs
haskellnotebook/haskell/neural/achilles/test/: hebbian.cc  hebbian.h
haskellnotebook/haskell/regex/: Makefile  Regex.hs  regex.pl
haskellnotebook/haskell/wxgui/src/: README  (+3 more)
haskellnotebook/lisp/LispLogAnalysis/: build.xml
haskellnotebook/lisp/LispWidgetToolkit_12_04/: CHANGELOG  NOTES.txt  build.xml
haskellnotebook/lisp/codegen2/: Makefile  codegen.lisp  codegen.properties  index_templ.html  sbcl.sh  utilities.lisp
haskellnotebook/lisp/httpforum/: Makefile  diagram.dot  example.dot  httpforum.lisp  postdata.properties  test-hash.lisp
haskellnotebook/lisp/lisp_erlang/: Makefile  test.sh
haskellnotebook/lisp/snippet/: Makefile  index_templ.html  sbcl.sh  snippet.lisp  snippet.properties  utilities.lisp
haskellnotebook/lisp/webapp/: README
haskellnotebook/misc/python/: all.sh  obfuscate.py
haskellnotebook/scheme/: Makefile  euler1.java  euler1.scm  euler14.scm  euler9.scm  hello.scm
(+300 files in other folders)
