--
-- Cabal build system for AMQPTests
--
Name:           SpiderTests
Version:        0.0.1
Cabal-Version:  >= 1.2
Description:    Spider Test Library in Haskell
License:		BSD3
License-file:   LICENSE.BOTLIST
Author:         Berlin Brown
Maintainer:		berlin.brown@gmail.com
Copyright:      Copyright (C) 2008 Berlin Brown
Homepage:       http://code.google.com/p/openbotlist/

Library
  Hs-Source-Dirs:        ../../lib/haskell/src src
  Ghc-Options:           -O2
  Build-Depends:         base, haskell98, network, 
                         binary, bytestring, utf8-string, time,
                         regex-compat, containers
  Exposed-modules:       Data.AMQP.QueueClient
                         Data.SpiderQueue.Queue
                         Data.SpiderNet.Bayes
                         Tests.AMQP.TestQueueClient 
                         Tests.Data.TestQueue
                         Tests.Data.TestBayesInvChi
                         Tests.Data.TestBayesProb

Executable test1
  Hs-Source-Dirs:     ../../lib/haskell/src src/Tests src
  Main-is:            Main.hs
  Other-Modules:      Tests.AMQP.TestQueueClient
                      Tests.Data.TestBayesInvChi